<resources>
    <string name="app_name">BlueDart</string>
    <string name="action_settings">Settings</string>
    <string name="deliverystatus">Delivery Status</string>
    <string name="submit">Submit</string>
    <string name="cancle">Cancle</string>
    <string name="progress">Progress</string>
    <string name="droplocation">Enter Drop Location</string>
    <string name="pickuplocation">Enter Pickup Location</string>
    <string name="enterboyname">Enter Boy Name</string>
    <string name="enteritemname">Enter Item Name</string>
    <string name="deliveryboyname">Enter Delivery Boy Name</string>
    <string name="deliveryboyemail">Enter Delivery Boy Email</string>
    <string name="deliveryboypass">Enter Delivery Boy Password</string>
    <string name="enteremailid">Enter Email ID</string>
    <string name="enterpassword">Enter Password</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="item_name">Item name</string>
    <string name="back">Back</string>
    <string name="boy_name">Boy Name</string>
    <string name="deliver">Delivered</string>
    <string name="logout">Logout</string>
    <string name="title_activity_deliveryboy_screen">DeliveryboyScreen</string>
    <string name="complete">Complete</string>
    <string name="GOOGLE_MAPS_API_KEY">AIzaSyBYYr7Zr7g2r-wra9xtoozADTznningCjM</string>
    <string name="title_activity_location_action">Map</string>
    <string name="location">Location</string>
    <string name="boyid">Boyid</string>
    <string name="itemname">ItemName</string>
    <string name="pickup">PickupLocation</string>
    <string name="drop">DropLocation</string>
    <string name="sucsses">Login Sucssesfull as manager</string>
    <string name="invalid">Please Enter Valid Credential</string>
    <string name="dloginsu">Login Sucssesfull as Delivery Boy</string>
    <string name="managerda">dalejan</string>
    <string name="manager">manager</string>
    <string name="who">who</string>
    <string name="plsenterpass">Please Enter Password</string>
    <string name="plsenteremail">Please Enter Email</string>
    <string name="car">Car</string>

    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="notavail">notAvailable</string>
    <string name="chooseboyid">Choose boy id for delivery</string>
    <string name="fillall">Fill all the Details</string>
    <string name="left">left</string>
    <string name="country_prompt">Choose a Item</string>
    <string-array name="boyidd">


    </string-array>
    <string-array name="country_arrays">
        <item name="bus">Bus</item>
        <item name="hat">Hat</item>
        <item name="bag">Bag</item>
        <item name="bat">Bat</item>
        <item name="shoe">Shoe</item>
        <item name="laptop">Laptop</item>
        <item name="bench">Bench</item>
        <item name="fan">Fan</item>
        <item name="ac">Ac</item>
        <item name="earphone">Earphone</item>
        <item name="guitar">Guitar</item>
        <item name="soap">Soap</item>
        <item name="shampoo">Shampoo</item>
        <item name="bottle">Bottle</item>
    </string-array>

</resources>
