<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent"
    tools:context="app.nirmlkar.dalejan.bluedart.Confirm">

    <LinearLayout
        android:layout_marginTop="@dimen/fifty"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/name"
            style="@style/inputlayoutstyle">

            <EditText
                android:id="@+id/ecitemname"
                android:focusable="false"
                android:hint="@string/itemname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/primary"
            style="@style/inputlayoutstyle">

            <EditText

                android:id="@+id/ecboyid"
                android:hint="@string/boyid"
                android:inputType="textEmailSubject"
                android:focusable="false"
                style="@style/editdetailstyle1"
              />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/secondary"
            style="@style/inputlayoutstyle">

            <EditText
                android:id="@+id/ecpickup"
                android:focusable="false"
                android:hint="@string/pickup"
                style="@style/editdetailstyle1"
                android:inputType="text" />


        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/secondary1"
            style="@style/inputlayoutstyle">

            <EditText
                android:id="@+id/ecdrop"
                android:focusable="false"
                android:hint="@string/drop"
                style="@style/editdetailstyle1"
                android:inputType="text" />


        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/flagg"
            style="@style/inputlayoutstyle">

            <EditText
                android:id="@+id/ecflag"
                android:focusable="false"
                android:hint="@string/progress"
                style="@style/editdetailstyle1"
                android:inputType="text" />


        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/sixty"
            android:layout_height="wrap_content">
            <Button
                android:layout_weight="1"
                android:id="@+id/btcboysubmit"
                style="@style/btnloginstyle1"
                android:text="@string/deliver"
               android:enabled="false"
                />
            <Button
                android:layout_weight="1"
                android:id="@+id/btcboylocation"
                style="@style/btnloginstyle1"
                android:text="@string/location"
                />
            <Button
                android:layout_weight="1"
                android:id="@+id/btcboycancle"
                style="@style/btnloginstyle1"
                android:text="@string/back"
                />

        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
