<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/btnloginstylerec"

    android:orientation="horizontal">

    <ImageView
        android:id="@+id/progresstasksignal"
        android:layout_marginTop="@dimen/twelve"
        android:layout_marginBottom="@dimen/twelve"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginRight="@dimen/ten"
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty"
        android:contentDescription="@string/todo" />
    <LinearLayout
        android:layout_weight="0.2"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/listitem"
            android:layout_marginTop="@dimen/five"
            android:textSize="@dimen/textsize"
            android:layout_weight="1"
            android:text="@string/item_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="NestedWeights" />
        <TextView
            android:id="@+id/listboy"
            android:layout_marginBottom="@dimen/five"
            android:textSize="@dimen/textsize"
            android:layout_weight="1"
            android:text="@string/boy_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>


</LinearLayout>
