<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent"
    tools:context="app.nirmlkar.dalejan.bluedart.activity.Login">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView

            android:layout_marginTop="@dimen/twenty"
            android:layout_marginLeft="@dimen/forty"
            android:id="@+id/imge"
            android:src="@drawable/bluedart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height"
            android:contentDescription="@string/todo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_marginLeft="@dimen/twenty"
            android:layout_marginTop="@dimen/forty"
            android:layout_marginRight="@dimen/twenty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enteremailid" />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_marginLeft="@dimen/twenty"
            android:layout_marginRight="@dimen/twenty"
            android:layout_marginTop="@dimen/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:inputType="textPassword"
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterpassword" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/forty"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:text="@string/login"
                android:id="@+id/login"
                style="@style/btnloginstyle" />

        </LinearLayout>


    </LinearLayout>



</android.support.constraint.ConstraintLayout>
